--- a/co.html
+++ b/co.html
@@ -15,6 +15,6 @@
 			<span class="text"> Tớ Tặng Cậu trái Tim Nè !!! </span>
 			
 		</div>
-        <button class="btn-reset" >Trung Tín</button>
+        <button class="btn-reset" >Hoàng Quý</button>
 	</body>
 </html>
